fix: row css misalign issue

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -92,3 +92,15 @@ img {
   display: block;
   margin: 0 auto;
 }
+
+/* Add this to your CSS file */
+.container {
+  display: flex;
+  flex-wrap: wrap;
+
+}
+
+.column {
+  flex: 1;
+  padding: 0.5 rem;
+}
